pkl-core/src/test/files/LanguageSnippetTests/input/errors/outOfRange2.pkl
res1 = "abc".substring(2, 1)